tests/suite/fail/generated/borrow/fail_move_send_input.ny
fn send(x: string) -> void { print(x) }
fn main() {
    let input = "hello"
    send(input)
    print(input) //~ ERROR was moved
}
